--- a/css/styles.css
+++ b/css/styles.css
@@ -176,11 +176,13 @@ h1 {
 /* maiin content */
 .text-container {
     margin: 0;
+    padding: 2em;
     border: 0;
     resize: none;
     width: auto;
     float: left;
-
+    width: 100%;
+    height: 100%;
     /* max-width: 100%; */
     /* width: 100%; */
     /* align-items: flex-start; */
